--- a/templates/index.html
+++ b/templates/index.html
@@ -5,12 +5,23 @@
 
             <h2 class="mt-5">CAMERA APP PHOTOMATH Daniel Bihar</h2>
 			<form method="post" action="{{ url_for('tasks') }}">
-			<input type="submit" value="Calculate" name="stop"  style="width: 260px; height: 100px; font-size:60px;"/>
-			<input type="submit" value="Capture" name="click" style="width: 260px; height: 100px; font-size:60px;" />
+			<input type="submit" value="Calculate" name="stop"  style="width: 200px; height: 70px; font-size:40px;"/>
+			<input type="submit" value="Capture" name="click" style="width: 200px; height: 70px; font-size:40px;" />
 			</form>
-            <img src="{{ url_for('video_feed') }}" height="80%">
+            <img src="{{ url_for('video_feed') }}" height="50%">
 			<h3 style="font-family:courier;">Instructions:</h3>
 			<ol style="font-family:courier;">
+			
+			<h3 style="font-family:courier;">
+			{% with messages = get_flashed_messages() %}
+			   {% if messages %}
+				  {% for message in messages %}
+					 {{ message }}
+				  {% endfor %}
+			   {% endif %}
+			{% endwith %}
+			</h3>
+			
 			<li>Capture to take a picture</li>
 			<li>Calculate to calculate expression</li>
 			
